[gd_scene load_steps=5 format=3 uid="uid://cym6o507phked"]

[ext_resource type="Script" path="res://scenes/levels/lava.gd" id="1_8h8un"]
[ext_resource type="Texture2D" uid="uid://bksqoekiuw6wx" path="res://assets/sprites/entities/challenge_room/fireball.png" id="2_yl0r7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_opw0t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yl0r7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ktoa"]
radius = 19.0
height = 50.0

[node name="Lava" type="RigidBody2D"]
position = Vector2(22, 18)
collision_layer = 4
collision_mask = 0
gravity_scale = 0.05
can_sleep = false
script = ExtResource("1_8h8un")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 8
visibility_layer = 8
position = Vector2(16.5625, 11)
scale = Vector2(0.0905769, 0.0775)
sprite_frames = SubResource("SpriteFrames_opw0t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 8
visibility_layer = 8
position = Vector2(18, 14)
shape = SubResource("CapsuleShape2D_3ktoa")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
light_mask = 8
visibility_layer = 8
position = Vector2(16, -22)
scale = Vector2(2.55, 0.3)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
